# chatbot-task

./: .gitignore  chatbot.py  guidance.md  pyproject.toml  readme.md  test.ipynb
src/: chatbot_engine.py  config.py  llm_client.py  logger.py  validator.py
